2008-02-22  Frank Ch. Eigler  <fche@elastic.org>

	PR5787, PR2608, .statement()
	* tapsets.cxx (query_dwarf_func): Process .statement(NUM) probes too.
	(query_cu): Ditto.
	(query_func_info): Bypass prologue searching for .statement() probes.
	(query_cu): Ditto.

	(build_blacklist): Remove unsightly empty first alternative in
	"^(|foo)$" regexps.  Show them for -vvv.

	* buildrun.cxx (compile_pass): Don't turn on "gcc -Q" on until -vvvv.

2008-02-20  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (struct mark_derived_probe): Renamed 'probe_sig' to
	'probe_format'.
	(mark_derived_probe::mark_derived_probe): Added new "format" probe
	point component.
	(mark_derived_probe::parse_probe_format): Renamed from
	'mark_derived_probe::parse_probe_sig'.
	(struct mark_builder): Added typedefs.  Converted mark_cache from
	a map to a multimap to handle markers with the same name but
	different formats.
	(mark_builder::build): Added new 'format' probe parameter.
	(register_standard_tapsets): Added new 'format' marker probe
	optional parameter.
	* stapprobes.5.in (parts): Documented new "format" probe
	component. 

2008-02-19  Roland McGrath  <roland@redhat.com>

	* tapsets.cxx (query_module): Use dwfl_module_getdwarf rather
	than dwfl_module_getelf for e_machine check.
	(dwarf_query::get_blacklist_section): Likewise for section search.
	Ignore non-SHF_ALLOC sections.

2008-02-19  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (query_module): Tweak elf-machine checking to
	better represent elfutils idioms.

2008-02-19  Frank Ch. Eigler  <fche@elastic.org>

	PR 5766.
	* tapsets.cxx (build_blacklist): Switch (back) to regexp-based
	blacklist construction ...
	(blacklist_p): ... and querying.

2008-02-19  David Smith  <dsmith@redhat.com>

	PR 5672.
	* tapsets.cxx (mark_derived_probe): Call probe_point copy ctor to
	shallow-copy incoming base probe location before
	recomputing/overwriting it.

2008-02-18  Frank Ch. Eigler  <fche@elastic.org>
